# Digital-Image-Processing-Labs

./: .gitignore  CMakeLists.txt
Reports/: ЦОИ лаб1.docx  ЦОИ лаб2.docx  ЦОИ лаб3.docx  ЦОИ лаб4.docx  ЦОИ лаб5.docx
Source/: Lab1.hpp  Lab2.hpp  Lab3.hpp  Lab4.hpp  Lab5.hpp  Top.cpp
